# rust-url-shortener

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.template  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
.sqlx/: query-89209fe429e886f715b53d58e58f07adb141de179e668f218c237f91e896cdda.json  query-9a058fa095ba8221a3b13055264343b95c1f72e49fa0767b50751aab2df554a1.json
migrations/: 20251108112730_init.sql
scripts/: setup.sh
src/: config.rs  main.rs  telemetry.rs
src/db/: mod.rs  models.rs  pool.rs  repository.rs
src/middleware/: api.rs
src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs
src/utils/: slug.rs
