[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }

# https://github.com/allan2/dotenvy
dotenv = "0.15.0"
