[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid" ] }

# https://github.com/allan2/dotenvy
dotenv = "0.15.0"

chrono = {version = "0.4.40", features = ["serde"]}
uuid ={ version="1.18.1", features = ["v4", "serde"]}

rand = "0.9.0"
